[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/artifacts/comum.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/battle/screens/victory/ArtifactLoot.gd" type="Script" id=3]
[ext_resource path="res://game/tooltip/TooltipCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/ui/Get Reagents button.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 302, 32 )

[node name="ArtifactLoot" type="HBoxContainer"]
margin_right = 624.0
margin_bottom = 64.0
custom_constants/separation = 20
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="GetButton" type="TextureButton" parent="."]
margin_left = 100.0
margin_right = 430.0
margin_bottom = 80.0
rect_min_size = Vector2( 330, 0 )
texture_normal = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="GetButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -7.0
margin_right = -48.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 1 )
text = "Get Artifact"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipPosition" type="Node2D" parent="."]
position = Vector2( 741, 0 )

[node name="TooltipCollision" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 302, 32 )

[node name="CollisionShape2D" parent="TooltipCollision" index="0"]
shape = SubResource( 2 )
[connection signal="button_down" from="GetButton" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="GetButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="GetButton" to="." method="_on_GetButton_pressed"]
[connection signal="disable_tooltip" from="TooltipCollision" to="." method="_on_TooltipCollision_disable_tooltip"]
[connection signal="enable_tooltip" from="TooltipCollision" to="." method="_on_TooltipCollision_enable_tooltip"]

[editable path="TooltipCollision"]
